--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,8 @@
     <!--Custom Colors-->
     <color name="recipely_black">#FF252c2c</color>
     <color name="recipely_white">#FFecf0f0</color>
+    <color name="recipely_light_blue">#FFc1dbdb</color>
+    <color name="recipely_gray">#FFa0a8ae</color>
+    <color name="recipely_green_dark">#FF042628</color>
+    <color name="recipely_gray_dark">#FFe6ebf2</color>
 </resources>
