--- a/app/src/main/res/layout/detail_screen_fragment.xml
+++ b/app/src/main/res/layout/detail_screen_fragment.xml
@@ -74,26 +74,14 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
+                    android:id="@+id/icon_map"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    tools:src="@drawable/icons8_alarm_clock_24"
+                    android:src="@drawable/icons8_marcador_de_mapa_24"
                     android:layout_marginTop="24dp"
-                    android:layout_marginEnd="8dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/recipe_time"/>
-
-                <TextView
-                    android:id="@+id/recipe_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/recipely_recipe_time_mock"
-                    android:textColor="@color/recipely_light_blue"
-                    android:textSize="14dp"
                     android:layout_marginEnd="24dp"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginBottom="16dp"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" />
+                    app:layout_constraintEnd_toEndOf="parent"/>
 
                 <TextView
                     android:id="@+id/recipe_description"
