--- a/app/src/main/res/layout/detail_screen_fragment.xml
+++ b/app/src/main/res/layout/detail_screen_fragment.xml
@@ -7,9 +7,10 @@
     tools:context=".ui.detail.DetailScreenFragment">
 
     <ImageView
+        android:id="@+id/recipe_image"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:src="@drawable/tacos"
+        tools:src="@drawable/tacos"
         android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -126,9 +127,10 @@
 
 
                         <TextView
+                            android:id="@+id/recipe_calories"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/app_name"
+                            tools:text="@string/app_name"
                             android:layout_gravity="center"
                             android:textColor="@color/recipely_black"
                             android:textSize="16sp"
@@ -156,9 +158,10 @@
 
 
                         <TextView
+                            android:id="@+id/recipe_carbs"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/app_name"
+                            tools:text="@string/app_name"
                             android:layout_gravity="center"
                             android:textColor="@color/recipely_black"
                             android:textSize="16sp"
@@ -199,9 +202,10 @@
 
 
                         <TextView
+                            android:id="@+id/recipe_proteins"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/app_name"
+                            tools:text="@string/app_name"
                             android:layout_gravity="center"
                             android:textColor="@color/recipely_black"
                             android:textSize="16sp"
@@ -229,9 +233,10 @@
 
 
                         <TextView
+                            android:id="@+id/recipe_fats"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@string/app_name"
+                            tools:text="@string/app_name"
                             android:layout_gravity="center"
                             android:textColor="@color/recipely_black"
                             android:textSize="16sp"
