Add Search Recipe Feature

--- a/app/src/main/res/layout/custom_topbar.xml
+++ b/app/src/main/res/layout/custom_topbar.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="50dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
+    android:elevation="4dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
@@ -22,15 +23,16 @@
     <TextView
         android:id="@+id/top_bar_title"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         tools:text="@string/app_name"
         android:textColor="@color/recipely_black"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_marginTop="16dp"
+
         app:layout_constraintStart_toEndOf="@+id/top_bar_left_icon"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/top_bar_right_icon"/>
+        app:layout_constraintEnd_toStartOf="@+id/top_bar_right_icon"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <ImageView
         android:id="@+id/top_bar_right_icon"
