--- a/app/src/main/res/drawable/bg_gradient.xml
+++ b/app/src/main/res/drawable/bg_gradient.xml
@@ -5,5 +5,5 @@
         android:angle="90"
         android:startColor="@color/recipely_green_dark"
         android:endColor="@color/color_secondary" />-->
-    <solid android:color="@color/color_secondary"/>
+    <solid android:color="@color/color_primary"/>
 </shape>
