--- a/app/src/main/res/layout/detail_screen_fragment.xml
+++ b/app/src/main/res/layout/detail_screen_fragment.xml
@@ -79,7 +79,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/icons8_marcador_de_mapa_24"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="28dp"
                     android:layout_marginEnd="24dp"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"/>
@@ -88,9 +88,12 @@
                     android:id="@+id/recipe_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|end"
                     android:text="@string/recipely_recipe_description_mock"
                     android:textColor="@color/recipely_gray"
-                    android:textSize="18dp"
+                    android:textSize="16dp"
+
+                    android:textStyle="bold"
                     android:layout_marginTop="24dp"
                     android:layout_marginHorizontal="24dp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -121,8 +124,8 @@
                             <ImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:layout_margin="8dp"
-                                android:src="@drawable/icons8_alarm_clock_24"/>
+                                android:layout_margin="5dp"
+                                android:src="@drawable/icons8_include_24"/>
                         </LinearLayout>
 
 
@@ -133,7 +136,7 @@
                             tools:text="@string/app_name"
                             android:layout_gravity="center"
                             android:textColor="@color/recipely_black"
-                            android:textSize="16sp"
+                            android:textSize="14sp"
                             android:layout_marginLeft="8dp"
                             />
 
@@ -152,8 +155,8 @@
                             <ImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:layout_margin="8dp"
-                                android:src="@drawable/icons8_alarm_clock_24"/>
+                                android:layout_margin="5dp"
+                                android:src="@drawable/icons8_include_24"/>
                         </LinearLayout>
 
 
@@ -164,7 +167,7 @@
                             tools:text="@string/app_name"
                             android:layout_gravity="center"
                             android:textColor="@color/recipely_black"
-                            android:textSize="16sp"
+                            android:textSize="14sp"
                             android:layout_marginLeft="8dp"
                             />
 
@@ -196,8 +199,8 @@
                             <ImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:layout_margin="8dp"
-                                android:src="@drawable/icons8_alarm_clock_24"/>
+                                android:layout_margin="5dp"
+                                android:src="@drawable/icons8_include_24"/>
                         </LinearLayout>
 
 
@@ -208,7 +211,7 @@
                             tools:text="@string/app_name"
                             android:layout_gravity="center"
                             android:textColor="@color/recipely_black"
-                            android:textSize="16sp"
+                            android:textSize="14sp"
                             android:layout_marginLeft="8dp"
                             />
 
@@ -227,8 +230,8 @@
                             <ImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:layout_margin="8dp"
-                                android:src="@drawable/icons8_alarm_clock_24"/>
+                                android:layout_margin="5dp"
+                                android:src="@drawable/icons8_include_24"/>
                         </LinearLayout>
 
 
@@ -239,7 +242,7 @@
                             tools:text="@string/app_name"
                             android:layout_gravity="center"
                             android:textColor="@color/recipely_black"
-                            android:textSize="16sp"
+                            android:textSize="14sp"
                             android:layout_marginLeft="8dp"
                             />
 
