--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,10 +8,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <!--Theme Colors-->
-    <color name="color_primary">#FFecf0f0</color>
-    <color name="color_primary_variant">#FFecf0f0</color>
-    <color name="color_secondary">#FF77bab9 </color>
-    <color name="color_secondary_variant">#FF66b2b7</color>
+    <!--<color name="color_primary">#FFecf0f0</color>-->
+    <color name="color_primary">#FF77bab9</color>
+    <color name="color_primary_variant">#FF66b2b7</color>
+    <color name="color_secondary">#FFecf0f0</color>
+    <color name="color_secondary_variant">#FFcec591</color>
     <!--Custom Colors-->
     <color name="recipely_black">#FF252c2c</color>
     <color name="recipely_white">#FFecf0f0</color>
