--- a/app/src/main/res/layout/detail_screen_fragment.xml
+++ b/app/src/main/res/layout/detail_screen_fragment.xml
@@ -63,7 +63,7 @@
 
                 <TextView
                     android:id="@+id/recipe_name"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="@string/recipely_recipe_item"
                     android:textColor="@color/recipely_black"
@@ -71,8 +71,10 @@
                     android:textSize="24dp"
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="24dp"
+                    android:layout_marginEnd="16dp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/icon_map"/>
 
                 <ImageView
                     android:id="@+id/icon_map"
