--- a/app/src/main/res/layout/custom_topbar.xml
+++ b/app/src/main/res/layout/custom_topbar.xml
@@ -22,13 +22,14 @@
 
     <TextView
         android:id="@+id/top_bar_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         tools:text="@string/app_name"
         android:textColor="@color/recipely_black"
         android:textSize="18sp"
         android:textStyle="bold"
-
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintStart_toEndOf="@+id/top_bar_left_icon"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/top_bar_right_icon"
